# autoply

./: .gitignore  Cargo.toml  LICENSE  README.md  dinners.json  family.json  prompt  publix.json  publix.json.report.json  publix.json.sanitized.json  pyproject.toml  sanitizer.py  test.py  test2.py  ycombinator_jobs.html
autoply/: __init__.py  __main__.py  logger.py  parser.py  plan.py  scraper.py
autoply/scrapers/: consts.py  example.py  indeed.py
data/: indeed-homepage.har  indeed-jobs.har
src/: cli.rs  main.rs
web/: README_AUTOPLY.md  package-lock.json
web/src/routes/: +layout.svelte  +page.server.js  +page.svelte
