[package]
authors = ["Gavin Roberts <gavinsroberts13@gmail.edu>"]
name = "autoply"
version = "0.1.0"
edition.workspace = true
description = """
Autoply - automatic job application tool
"""

[workspace.package]
edition = "2024"

[workspace.dependencies]
# internal crates

# external crates
anyhow = "1.0"
clap = "4.5"
ctrlc = { version = "3.4", features = ["termination"] }
reqwest = { version = "0.12", features = ["json"] }
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34"
tempfile = "3.20"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.45", features = ["full"] }
uuid = { version = "1.17", features = ["v4", "serde"] }

[dependencies]
anyhow.workspace = true
clap.workspace = true
ctrlc.workspace = true
reqwest.workspace = true
rmp-serde.workspace = true
serde.workspace = true
serde_json.workspace = true
sled.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
uuid.workspace = true
