[tool.poetry]
name = "autoply"
version = "0.1.0"
description = "A python tool to scrape job data from websites"
authors = ["Gavin Roberts <gavinsroberts13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
playwright = "^1.57.0"
google-generativeai = "^0.8.6"
google = "^3.0.0"
google-genai = "^1.56.0"
openai = "^2.14.0"

[tool.poetry.scripts]
autoply = "autoply.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
