[tool.poetry]
name = "autoply"
version = "0.1.0"
description = "A python tool to scrape job data from websites"
authors = ["Gavin Roberts <gavinsroberts13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
playwright = "^1.57.0"
openai = "^2.14.0"
dotenv = "^0.9.9"

[tool.poetry.scripts]
autoply = "autoply.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
